Integrates custom fonts and fixes z-index error

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,7 @@ a:hover {
 html,
 body {
   height: 100%;
+  font-family: 'Ubuntu Condensed', sans-serif;
 }
 body {
   color: #fff;
@@ -130,6 +131,7 @@ body {
   bottom:0;
   width:100%;
   height:60px;
+  z-index: -1;
 }
 
 
@@ -287,7 +289,6 @@ body {
 .about-contact {
   margin-top: 150px;
   bottom: 50px;
-  z-index: 1;
 }
 
 .skills {
