--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -2,9 +2,9 @@
 @import "jquery-ui";
 @import "gritter";
 
-// body {
-//   min-height: 75rem; /* Can be removed; just added for demo purposes */
-// }
+body {
+  font-family: 'Ubuntu Condensed', sans-serif;
+}
 
 .navbar {
   margin-bottom: 0;
@@ -57,9 +57,6 @@ footer {
   padding-bottom: 3rem;
 }
 
-// footer p {
-//   margin-bottom: .25rem;
-// }
 
 /*
  * Custom Styles
